fixed footers having too much space

--- a/static/calendar.css
+++ b/static/calendar.css
@@ -94,7 +94,7 @@ nav ul li a i {
 footer {
     background-color: #2752fb;
     color: #fff;
-    padding: 10px;
+    padding: 2px;
     text-align: center;
     margin-top: 20px;
     /* Push the footer to the bottom */
@@ -117,6 +117,7 @@ footer {
         padding-right: 3px;
         /* Add right padding to the icon */
     }
+    
 }
 
 @media screen and (max-width: 768px) {
