--- a/static/styles.css
+++ b/static/styles.css
@@ -302,7 +302,7 @@ button[type="submit"]:focus {
 footer {
     background-color: #2752fb;
     color: #fff;
-    padding: 10px;
+    padding: 2px;
     text-align: center;
 }
 
@@ -312,6 +312,11 @@ footer {
     nav ul {
         display: flex;
         justify-content: center;
+    }
+
+    nav ul li a i {
+        padding-right: 3px;
+        /* Add right padding to the icon */
     }
 
     .team-pic-container,
